<resources>
    <string name="app_name">SapiNews</string>
    <string name="hint_phone">Phone number</string>
    <string name="title_activity_login">Sign in</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="Phone">Phone Number</string>
    <string name="haveaccount">Do you have an account? If not, Sign Up</string>
    <string name="loginActivity">loginActivity</string>
    <string name="advertismentTitle">Title</string>
    <string name="advshortDesc">Short Description</string>
    <string name="advlongDesc">Long Description</string>
    <string name="advcationText">Location Text</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Add">Hozzáadás</string>
    <string name="home">Otthon</string>
    <string name="Profile">Profil</string>
    <string name="Address">Address</string>
    <string name="Email">Email</string>
    <string name="Image">Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
