<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddAdvertismentFragment">


    <EditText
        android:id="@+id/TitleView"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light_gray"
        android:ems="10"
        android:hint="@string/advertismentTitle"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PhoneNumber"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light_gray"
        android:ems="10"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LongView" />

    <EditText
        android:id="@+id/LocationView"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light_gray"
        android:ems="10"
        android:hint="@string/advcationText"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhoneNumber" />

    <EditText
        android:id="@+id/ShortView"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light_gray"
        android:ems="10"
        android:hint="@string/advshortDesc"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleView" />

    <EditText
        android:id="@+id/LongView"
        android:layout_width="340dp"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light_gray"
        android:ems="10"
        android:hint="@string/advlongDesc"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShortView" />
</android.support.constraint.ConstraintLayout>