<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddAdvertismentActivity">

    <TextView
        android:id="@+id/phonenumber"
        android:layout_width="354dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light_gray"
        android:hint="@string/Phone"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longdescription" />

    <TextView
        android:id="@+id/locationtext"
        android:layout_width="354dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light_gray"
        android:hint="@string/advcationText"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phonenumber" />

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="354dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light_gray"
        android:hint="@string/advertismentTitle"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shortdescription"
        android:layout_width="354dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light_gray"
        android:hint="@string/advshortDesc"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />

    <TextView
        android:id="@+id/longdescription"
        android:layout_width="354dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light_gray"
        android:hint="@string/advlongDesc"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shortdescription" />
</android.support.constraint.ConstraintLayout>