<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".javaFragments.AddAdvertisementFragment">


    <ImageView
        android:id="@+id/imageSecond"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:src="@color/light_gray"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageFirst"
        app:layout_constraintTop_toBottomOf="@+id/locationText"
        app:layout_constraintVertical_bias="0.204" />

    <EditText
        android:id="@+id/titleText"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light_gray"
        android:ems="10"
        android:hint="@string/advertismentTitle"
        android:inputType="textCapSentences|textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light_gray"
        android:ems="10"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longDescription" />

    <EditText
        android:id="@+id/locationText"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light_gray"
        android:ems="10"
        android:hint="@string/advcationText"
        android:inputType="textCapSentences|textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <EditText
        android:id="@+id/shortDescription"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light_gray"
        android:ems="10"
        android:hint="@string/advshortDesc"
        android:inputType="textCapSentences|textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <EditText
        android:id="@+id/longDescription"
        android:layout_width="340dp"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light_gray"
        android:ems="10"
        android:hint="@string/advlongDesc"
        android:inputType="textCapSentences|textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shortDescription" />

    <ImageView
        android:id="@+id/addButton"
        android:layout_width="45dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/add_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationText"
        app:layout_constraintVertical_bias="0.251" />

    <ImageView
        android:id="@+id/imageFirst"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:src="@color/light_gray"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationText"
        app:layout_constraintVertical_bias="0.204" />

    <ImageView
        android:id="@+id/nextButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/forward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageSecond"
        app:layout_constraintTop_toBottomOf="@+id/locationText"
        app:layout_constraintVertical_bias="0.317" />

    <ImageView
        android:id="@+id/previousButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/backward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageFirst"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationText"
        app:layout_constraintVertical_bias="0.317" />

    <TextView
        android:id="@+id/addImageText"
        android:layout_width="39dp"
        android:layout_height="19dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Image"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationText"
        tools:text="@string/Image" />

</android.support.constraint.ConstraintLayout>