<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".javaActivities.MyAdvertismentDetailActivity">

    <ImageView
        android:id="@+id/EditButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toEndOf="@+id/DeleteButton"
        app:srcCompat="@drawable/edit" />

    <ImageView
        android:id="@+id/PostPicture"
        android:layout_width="384dp"
        android:layout_height="173dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sloth" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light_gray"
        android:ems="10"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longDescription" />

    <EditText
        android:id="@+id/locationText"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light_gray"
        android:ems="10"
        android:hint="@string/advcationText"
        android:inputType="textCapSentences|textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <EditText
        android:id="@+id/longDescription"
        android:layout_width="340dp"
        android:layout_height="133dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light_gray"
        android:ems="10"
        android:hint="@string/advlongDesc"
        android:inputType="textCapSentences|textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PostPicture" />

    <TextView
        android:id="@+id/PostTitle"
        android:layout_width="153dp"
        android:layout_height="28dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="7dp"
        android:text="TextView"
        android:textColor="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/PostPicture" />

    <ImageView
        android:id="@+id/ShareButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/share" />

    <ImageView
        android:id="@+id/DeleteButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ShareButton"
        app:srcCompat="@drawable/delete" />

    <ImageView
        android:id="@+id/BackButton"
        android:layout_width="20dp"
        android:layout_height="42dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/NextButton"
        android:layout_width="20dp"
        android:layout_height="42dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/next" />

</android.support.constraint.ConstraintLayout>